small fix for the cmake for VS and the readme

--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -14,13 +14,18 @@ add_executable(Game ${SRC_FILES})
 target_include_directories(Game PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty
 )
-target_link_libraries(Game PRIVATE m
+target_link_libraries(Game PRIVATE
     Vulkan::Vulkan
     glfw
     Freetype::Freetype
 )
 
 set_target_properties(Game PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY "$1<:${CMAKE_CURRENT_SOURCE_DIR}/Compiled"
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Compiled
 	RUNTIME_OUTPUT_NAME "VK_FNAF"
 )
+if(MSVC)
+    set_target_properties(Game PROPERTIES 
+    RUNTIME_OUTPUT_DIRECTORY "$<1:${CMAKE_CURRENT_SOURCE_DIR}/Compiled>"
+    )
+endif()
